--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -149,7 +149,102 @@ img {
 /* three boxes on nav bar */
 #nav__button-ghost_ {
     padding: 5px 30px;
-    cursor: none;
+}
+#nav__button-ghost_:hover {
+    padding: 5px 35px;
+}
+
+/* LOGIN PAGE */
+.nav__button-link {
+    background-color: hsla(0, 0%, 100%, 0.3);
+    padding: 1rem 2.5rem;
+    border: 2px solid var(--title-color);
+    border-radius: 0.75rem;
+    transition: 0.5s;
+}
+.nav__button-link:hover {
+    .nav__button-ghost:hover {
+        padding: 1rem 2.9rem;
+        transition: 0.5s;
+    }
+}
+
+.login-form {
+    height: 520px;
+    width: 400px;
+    background-color: rgba(255, 255, 255, 0.13);
+    position: absolute;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    border-radius: 10px;
+    backdrop-filter: blur(10px);
+    border: 2px solid rgba(255, 255, 255, 0.1);
+    box-shadow: 0 0 40px rgba(8, 7, 16, 0.6);
+    padding: 50px 35px;
+}
+.login-form *,
+.patient-info-form * {
+    font-family: "Poppins", sans-serif;
+    color: #161515;
+    letter-spacing: 0.5px;
+    outline: none;
+    border: none;
+}
+.login-form h3 {
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 42px;
+    text-align: center;
+}
+
+label {
+    display: block;
+    margin-top: 30px;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+input {
+    display: block;
+    height: 50px;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.07);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+    box-shadow: 0 0 10px rgba(8, 7, 16, 0.3);
+}
+::placeholder {
+    color: #9e9c9c;
+}
+
+#submit-btn {
+    margin-top: 50px;
+    width: 100%;
+    background-color: #0f7a73;
+    color: #fff;
+    padding: 10px 0;
+    font-size: 18px;
+    font-weight: 600;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+#submit-btn:hover {
+    padding: 15px 0;
+    transition: 0.3s;
+}
+
+.forget-password {
+    float: right;
+    margin-top: 10px;
+}
+.forget-password a {
+    text-decoration: none;
+    color: #161515;
 }
 
 /* Navigation for mobile devices */
